@@ -376,7 +376,9 @@ HELM("helmet", "plumed helmet",
 HELM("helm of brilliance", "etched helmet",
      0, 1,           0,  6, 1, 50, 50,  9, 0, IRON, CLR_GREEN),
 HELM("helm of opposite alignment", "crested helmet",
-     0, 1,           0,  6, 1, 50, 50,  9, 0, IRON, HI_METAL),
+     0, 1,           0,  4, 1, 50, 50,  9, 0, IRON, HI_METAL),
+HELM("helm of opaque thoughts", "fearsome helmet",
+     0, 1, PSYCHIC_RES,  2, 1, 50, 50,  9, 0, IRON, CLR_YELLOW),
 HELM("helm of telepathy", "visored helmet",
      0, 1,     TELEPAT,  2, 1, 50, 50,  9, 0, IRON, HI_METAL),
 
