@@ -220,8 +220,9 @@ New Items
 - Amulet of Nausea
 - Amulet of Danger
 - Mask
-- Playing card deck
-- Deck of fate
+- Helm of Opaque Thoughts
+- Playing Card Deck
+- Deck of Fate
 - Pinch of Catnip
 - Potion of Reflection
 - Scroll of Cloning
@@ -253,6 +254,7 @@ New Monsters
 - Will-O'-The-Wisp
 - Monstrous spider
 - Memory Hound
+- Thought Hound
 - Weeping Eye
 - Serval
 - Lion
@@ -311,6 +313,8 @@ New Monsters
 - Screamer
 - Purple Dragon
 - Baby Purple Dragon
+- Mind Flayer Telepath
+- Gnomish Psychic
 - Cartomancer (Player Monster)
 - Dragonmaster (Player Monster)
 - Infernal (Non-generated Race)
